--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "nuxt-buefy": "^0.3.2",
     "@nuxtjs/axios": "^5.3.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "node-sass": "^4.13.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "sass-loader": "^8.0.0",
+    "vue-jest": "^4.0.0-0",
+    "vue-style-loader": "^4.1.2"
+  }
 }
